# app/models/ggs_extraction_file.rb
@@ -1,0 +1,7 @@
+class GgsExtractionFile < ApplicationRecord
+  include ExtractionFile
+
+  belongs_to :extraction, class_name: 'GgsExtraction'
+
+  def fullpath = extraction.working_dir.join(ggs_job_id, name)
+end
